--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.2.2",
+    "@egjs/vue-flicking": "^4.4.0",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "jssha": "^3.2.0",
+    "lodash": "^4.17.21",
+    "slick-carousel": "^1.8.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.4.0",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-slick": "^1.1.16",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -25,8 +36,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-pug": "^2.0.0",
+    "vue-cli-plugin-vuetify": "^2.4.3",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
