--- a/src/assets/fontello/config.json
+++ b/src/assets/fontello/config.json
@@ -141,6 +141,12 @@
       "css": "cancel-1",
       "code": 59403,
       "src": "entypo"
+    },
+    {
+      "uid": "22cfc7af2c4f158b37317c65c92b48c2",
+      "css": "location",
+      "code": 59404,
+      "src": "elusive"
     }
   ]
 }
